[package]
name = "gitsync"
version = "0.1.9"
authors = ["David McKay <david@rawkode.com>"]
edition = "2018"
license = "MIT"
description = "Library that facilitates monitoring Git repositories for changes. Could enable GitOps"
repository = "https://github.com/rawkode/gitsync"

[dependencies]
git2 = "0.18"
log = "0.4"

[dev-dependencies]
async-trait = "0.1"
cucumber = { version = "0.20" }
tempfile = "3.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[[test]]
name = "cucumber"
harness = false
