[package]
name = "gitsync"
version = "0.2.0"
authors = ["David McKay <david@rawkode.com>"]
edition = "2018"
rust-version = "1.90"
license = "MIT"
description = "Library that facilitates monitoring Git repositories for changes. Could enable GitOps"
repository = "https://github.com/rawkode/gitsync"

[dependencies]
gix = { version = "0.84", features = ["blocking-http-transport-reqwest-rust-tls", "blocking-network-client"] }
log = "0.4"

[dev-dependencies]
async-trait = "0.1"
cucumber = { version = "0.23" }
tempfile = "3.27"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[[test]]
name = "cucumber"
harness = false
